# rhombus

./: .gitignore  CMakeLists.txt  README.md
Rhombus/Rhombus/: matmul.h  matvec.h  ring_op.h
Rhombus/test/: CMakeLists.txt  test_rhombus_matmul.cpp  test_rhombus_matvec.cpp
SCI/networks/: CMakeLists.txt  main_densenet121.cpp  main_resnet32_cifar.cpp  main_resnet50.cpp  main_sqnet.cpp
SCI/src/: library_fixed.cpp  library_fixed_uniform.cpp
SCI/src/utils/: exit_codes.h  net_io_channel.h  prg.h
SCI/src/utils/cmake/: source_of_randomness.cmake
SCI/tests/: test_field_argmax.cpp  test_field_conv.cpp  test_field_elemwise_prod.cpp  test_field_fc.cpp  test_field_maxpool.cpp  test_field_relu.cpp  test_field_truncation.cpp  test_ring_argmax.cpp  test_ring_aux_protocols.cpp  test_ring_exp.cpp  test_ring_hadamard_product.cpp  test_ring_matmul.cpp  test_ring_maxpool.cpp  test_ring_relu.cpp  test_ring_sigmoid.cpp  test_ring_sqrt.cpp  test_ring_tanh.cpp  test_ring_truncation.cpp  test_ring_value_extension.cpp
include/: urandom.h
include/gemini/cheetah/: tensor.h
networks/: main_Lenet.cpp  main_densenet121.cpp  main_resnet50.cpp  main_sqnet.cpp  main_vgg11.cpp
scripts/: build-deps.sh  build.sh  common.sh  run-client.sh  run-server.sh  throttle.sh
